# easy_profiler

./: BUILD.gn
easy_profiler_core/: profile_manager.cpp  reader.cpp  thread_storage.cpp
easy_profiler_core/include/easy/: profiler.h
easy_profiler_core/include/easy/details/: easy_compiler_support.h
